Fix #6: correctly set overflow and color-scheme property

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,9 @@
     --color-theme-secondary: #e9e9e9;
     --color-theme-accent: #dedede;
     --color-theme-text-primary: #0f0f0f;
+    color-scheme: light;
     @media (prefers-color-scheme: dark) {
+        color-scheme: dark;
         --color-theme-primary: #1b1b1b;
         --color-theme-secondary: #242424;
         --color-theme-accent: #3d3d3d;
@@ -45,10 +47,7 @@ html {
 }
 
 body {
-    overscroll-behavior-y: none;
     height: 100%;
-    overflow: auto;
-    -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
 }
 
 .frost {
